2005-08-24  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_set_sample),
	(gst_ring_buffer_clear_all):
	* gst-libs/gst/audio/gstringbuffer.h:
	Added function to clear the ringbuffer.

2005-08-24  Andy Wingo  <wingo@pobox.com>

	* sys/v4l/gstv4lelement.c (gst_v4lelement_start) 
	(gst_v4lelement_stop): Call _start and _stop for xoverlay instead
	of _open and _close.

	* sys/v4l/gstv4lxoverlay.h:
	* sys/v4l/gstv4lxoverlay.c (gst_v4l_xoverlay_set_xwindow_id): Open
	an Xv connection here, instead of all the time. Make Xv only be
	loaded if you axe for it. Kindof a workaround for buggy behaviour
	of Xv when using remote xservers (XvQueryExtension would block).
	(gst_v4l_xoverlay_stop, gst_v4l_xoverlay_start): New functions,
	replace the _open and _close public API. Only start the xv
	connection if necessary.
	(gst_v4l_xoverlay_open, gst_v4l_xoverlay_close): Made static.

2005-08-23  David Schleef  <ds@schleef.org>

	* gst/audioresample/Makefile.am: Leet audioresampling code
	* gst/audioresample/buffer.c:
	* gst/audioresample/buffer.h:
	* gst/audioresample/debug.c:
	* gst/audioresample/debug.h:
	* gst/audioresample/functable.c:
	* gst/audioresample/functable.h:
	* gst/audioresample/gstaudioresample.c:
	* gst/audioresample/gstaudioresample.h:
	* gst/audioresample/resample.c:
	* gst/audioresample/resample.h:
	* gst/audioresample/resample_chunk.c:
	* gst/audioresample/resample_functable.c:
	* gst/audioresample/resample_ref.c:

2005-08-23  Wim Taymans  <wim@fluendo.com>

	* examples/seeking/seek.c: (make_vorbis_pipeline),
	(make_theora_pipeline), (make_vorbis_theora_pipeline), (do_seek):
	Small seek updates.

2005-08-23  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/audio/gstbaseaudiosrc.c
	(gst_base_audio_src_fixate): Only fixate endianness if it is
	present in the caps.

2005-08-22  Andy Wingo  <wingo@pobox.com>

	* ext/alsa/gstalsasink.c (gst_alsasink_get_property): 
	* ext/alsa/gstalsasrc.c (gst_alsasrc_get_property): Add a