@@ -1,3 +1,11 @@
+2005-08-24  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* check/Makefile.am:
+	  Add CHECK_CFLAGS and LDFLAGS
+
+	* gst/playback/gstplaybasebin.c: (fill_buffer):
+	  GST_MESSAGE_SRC became a GObject
+
 2005-08-24  Wim Taymans  <wim@fluendo.com>
 
 	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_set_sample),
